--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
-
 {
-	"author":"MiracEzra",
-	"name": "fcc-learn-npm-package-json",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/miracezra/MiracFCC.git"
-	}
+  "name": "miracfcc",
+  "version": "1.0.0",
+  "description": "[![Run on Repl.it](https://repl.it/badge/github/freeCodeCamp/boilerplate-npm)](https://repl.it/github/freeCodeCamp/boilerplate-npm)",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miracezra/MiracFCC.git"
+  },
+  "author": "Mirac Ergenc",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/miracezra/MiracFCC/issues"
+  },
+  "homepage": "https://github.com/miracezra/MiracFCC#readme"
 }
